# photospp

./: LICENSE  Makefile  README  README-examples  configure  configure.in  configure.paths.csh.in  configure.paths.sh.in  setup.sh
demo_cxx/: Makefile
demo_cxx/documentation/: Photos_interface_design.tex
demo_cxx/documentation/doxygen/: Doxyfile
demo_cxx/example/: Makefile  photos_pythia_example.c  tauola_photos_pythia_example.c
demo_cxx/example/testing/: README  test.inc
demo_cxx/example/testing/Htautau/: Makefile  RhoRhoPHOTOSUserTreeAnalysis.C  SETUP.C  mc-tester.benchmark.Htautau.root
demo_cxx/example/testing/Wenu/: SETUP.C  mc-tester.Wenu.root
demo_cxx/example/testing/Wmunu/: mc-tester.root-Wmunu-photos-100M-nosym-10MeV
demo_cxx/example/testing/Zee/: pythia_Z.conf
demo_cxx/example/testing/Zmumu/: SETUP.C  mc-tester.Zmumu.root
demo_cxx/src/: Log.cxx  Makefile  Photos.cxx  PhotosEvent.h  PhotosHepMCParticle.h  PhotosParticle.h  Photos_make.h
documentation/: Photos_interface_design.bib  bremall.eps  bremdec.eps  coplanarity-angle-C-photon-over-1-GeV.eps  coplanarity-angle-D-photon-over-1-GeV.eps
documentation/doxygen/: changelog.txt  mainpage.h
documentation/latex_documentation/: M1@0001.eps  Photos_interface_design.bib  Photos_interface_design.cls  Photos_interface_design.tex  b-M1@0001.eps  coplanarity-angle-C-photon-over-1-GeV.eps  coplanarity-angle-D-photon-over-1-GeV.eps  interface_design.eps  lineshape.eps
example/: Makefile  configure  configure.in  make.inc.in  photos_pythia_example.c  tauola_photos_pythia_example.c
example/testing/: Makefile
example/testing/Htautau/: mc-tester.Htautau.root
example/testing/Wenu/: Makefile  mc-tester.root-Wenu-photos-100M-nosym-10MeV
example/testing/Wmunu/: Makefile  mc-tester.Wmunu.root
example/testing/Zee/: SETUP.C
examples/: Makefile  README  configure  configure.in  make.inc.in  photosLCG_pythia_example.c  photosLCG_pythia_example.cxx  photos_hepevt_example.c  photos_hepevt_example.cxx  photos_hepevt_example.f  photos_hepevt_example_interface.cxx  photos_pythia_example.c  photos_pythia_example.cxx  photos_standalone_example.c  photos_standalone_example.cxx  single_photos_gun_example.c  single_photos_gun_example.cxx  tauola_photos_pythia_example.c  tauola_photos_pythia_example.cxx
examples/testing/: Makefile  README  README-benchfiles  README-comparison-options  README-plots  compare.sh  photos_tauola_test.c  photos_tauola_test.cxx  photos_test.c  photos_test.cxx  test.inc
examples/testing/Htautau/: Makefile  RhoRhoPHOTOSUserTreeAnalysis.C  SETUP.C  mc-tester.benchmark.Htautau.root
examples/testing/ScalNLO/: Makefile  README  SETUP.C  mc-tester.root-1000M-LO-1-phot  mc-tester.root-1000M-LO-EXP  mc-tester.root-1000M-NLO-1-phot  mc-tester.root-1000M-NLO-EXP  mc-tester.root-pispectr-RCall  tauola_photos_pythia_example.c
examples/testing/Wenu/: Makefile
examples/testing/Wmunu/: Makefile  SETUP.C
examples/testing/WmunuNLO/: Makefile  README-NLO  photos_pythia_example.c
examples/testing/Zee/: Makefile  SETUP.C  mc-tester.root-Zee-10M-nosym-10MeV  mc-tester.root-Zee-1M-good
examples/testing/Zmumu/: Makefile  SETUP.C  mc-tester.Zmumu.root-LO-10M  mc-tester.Zmumu.root-NLO-100M
examples/testing/ZmumuNLO/: Makefile  README-NLO  SETUP.C  photos_pythia_example.c
examples/testing/Ztautau/: Makefile  SETUP.C
examples/testing/pairs/: Makefile  README  SETUP.C  mc-tester.root-Zmumu-pairs-10M  mc-tester.root-Zmumu-pairs-10M-PRHARD-0.99
examples/testing/ttbar/: Makefile  SETUP.C  pythia_ttbar.conf
photos/: photos.f
photos-fortran/: makefile  photos.f
platform/: make.inc  make.inc.in  use-LCG-config.sh
platform/LCGCONFIG/: Makefile.am  configure.ac
platform/LCGCONFIG/examples/: Makefile.am
platform/LCGCONFIG/photos-fortran/: Makefile.am
platform/LCGCONFIG/src/: Makefile.am
src/: Log.h  Makefile  PH_HEPEVT_Interface.h  Photos.h  PhotosHepMCParticle.cxx  Photos_make.f
src/eventRecordInterfaces/: Makefile  PhotosHEPEVTEvent.cxx  PhotosHEPEVTEvent.h  PhotosHEPEVTParticle.cxx  PhotosHEPEVTParticle.h  PhotosHepMCEvent.cxx  PhotosHepMCEvent.h  PhotosHepMCParticle.cxx  PhotosHepMCParticle.h
src/photos-C/: HEPEVT_struct.h  forW-MEc.cxx  forZ-MEc.cxx  forZ-MEc.h  makefile  pairs.cxx  pairs.h  photosC.cxx  struct_decl.h
src/photos-fortran/: forW-MEc.cxx  forZ-MEc.cxx  makefile  pairs.cxx  pairs.h  photos.f  photosC.cxx  wrappers.cxx  wrappersW.cxx  wrappersZ.cxx
src/photos-fortran/pairs/: makefile  pairs.c  pary.f  phopar.c  photos.f  pseudo_jetset.f
src/photos-fortran/pairs/photos-pary/: pary+demo.f  pary8.f  phosem.f  photos1-7.f
src/photosCInterfaces/: Makefile  Photos.cxx  Photos.h  PhotosBranch.cxx  PhotosBranch.h  PhotosEvent.cxx  PhotosEvent.h  PhotosParticle.cxx  PhotosParticle.h
src/photosFortranInterfaces/: Makefile  PH_HEPEVT_Interface.c  PH_HEPEVT_Interface.cxx  PH_HEPEVT_Interface.h  PhotosUtilities.cxx  PhotosUtilities.h  Photos_make.f  f_Init.h  forW-ME.f  forW-MEc.cxx  forZ-ME.f  forZ-MEc.cxx  photosC.cxx  wrappers.cxx  wrappersW.cxx  wrappersZ.cxx
src/utilities/: Log.cxx  Log.h  Makefile  PhotosDebugRandom.h  PhotosRandom.cxx  PhotosRandom.h  PhotosUtilities.cxx  PhotosUtilities.h
