lib_LTLIBRARIES = libPhotosFortran.la

libPhotosFortran_la_SOURCES = photos.f       \
../src/photosFortranInterfaces/Photos_make.f \
../src/photosFortranInterfaces/forW-ME.f     \
../src/photosFortranInterfaces/forZ-ME.f

libPhotosFortran_la_FFLAGS = -fno-automatic -fno-backslash -ffixed-line-length-132
